# cazzmachine

./: .gitignore  ANDROID_STATUS.md  LICENSE  README.md  RELEASE_CHECKLIST_v0.2.2.md  RELEASE_NOTES.md  cazzmachine-signed.apk.idsig  cazzmachine.keystore  delete_db.sh  index.html  jest.config.js  package-lock.json  package.json  playwright.config.ts  playwright.tauri.config.ts  sign.sh  tailwind.config.ts  vitest.config.ts
.sisyphus/: boulder.json
.sisyphus/plans/: multithreaded-consumption.md
__tests__/: appStore.test.ts  tauriCommands.test.ts  urlOpening.test.ts
e2e/: app.spec.ts  imageDisplay.spec.ts  navigation.spec.ts  preview.spec.ts  tauri-full.spec.ts  tauri.spec.ts  thumbnailEdgeCases.spec.ts
e2e/fixtures/: crawlItems.ts
e2e/test-results/: index.html
playwright-report/: index.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_add_is_consumed.sql  003_add_app_state.sql
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/android/: background_service.rs  mod.rs
src-tauri/src/crawler/: bbcnews.rs  chucknorris.rs  dadjoke.rs  gossip.rs  hackernews.rs  jokeapi.rs  meme.rs  mod.rs  news.rs  provider.rs  reddit.rs  scheduler.rs  uselessfacts.rs  util.rs  video.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/notifications/: mod.rs  templates.rs
src-tauri/src/shared/: buffer_manager.rs  consumption_calculator.rs  lifecycle_manager.rs  mod.rs
src-tauri/src/summary/: mod.rs
src-tauri/tests/: crawler_tests.rs  db_tests.rs
src/components/: CategoryFilter.tsx  CrawlItemCard.tsx  DetailView.tsx  DiagnosticsPanel.tsx  ErrorBoundary.tsx  HoverPreview.tsx  IdleView.tsx  SplashScreen.tsx  Summary.tsx  ThreadSlider.tsx  ThrottleKnob.tsx  Toast.tsx
src/hooks/: useAppLifecycle.ts  useCrawlStats.ts  useHoverTimeout.ts  useNotifications.ts  useThumbnailUrl.ts
src/lib/: constants.ts  tauri.ts
src/stores/: appStore.ts
src/utils/: diagnostics.ts
