[package]
name = "cazzmachine"
version = "0.2.3"
description = "I doomscroll so you don't have to"
authors = ["you"]
edition = "2021"

[lib]
name = "cazzmachine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-app-events = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
open = "5"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
mockito = "1"
futures = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
